samples/_failures_safe/1761244956_3e98f6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a74b8e79.c: In function ‘main’:
./samples/SAFE/__tmp_a74b8e79.c:122:9: error: expected declaration or statement at end of input
  122 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_a74b8e79.c:122:9: error: expected declaration or statement at end of input
